took out shitty second nav bar for mobile

--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
     <div id="heading-name" class="sticky">
       <div class="container center">
         <div class="flex-1"></div>
-          <div class="flex-3">
-            <div class="container">
-              <div class="flex-1 name">        
-                <h1 id="first-letter" class="letter">J</h1>
-              </div>
-              <div class="flex-1">        
-                <h1 class="letter">A</h1>
-              </div>
-              <div class="flex-1">        
-                <h1 class="letter">M</h1>
-              </div>
-              <div class="flex-1">        
-                <h1 class="letter">E</h1>
-              </div>
-              <div class="flex-1">        
-                <h1 class="letter">S</h1>
-              </div>
+        <div class="flex-3">
+          <div class="container">
+            <div class="flex-1 name">        
+              <h1 id="first-letter" class="letter">J</h1>
             </div>
+            <div class="flex-1">        
+              <h1 class="letter">A</h1>
+            </div>
+            <div class="flex-1">        
+              <h1 class="letter">M</h1>
+            </div>
+            <div class="flex-1">        
+              <h1 class="letter">E</h1>
+            </div>
+            <div class="flex-1">        
+              <h1 class="letter">S</h1>
+            </div>
+          </div>
         </div>
         <!-- <div class="flex-1"></div>       -->
       </div>
@@ -76,18 +76,24 @@
 
     <div class="parent-column sticky">
       <div id="nav-column" class="center list">
+        <!-- <div id="mobile-1" class="mobile"> -->
         <div class="nav-container">
           <a href="#about"><p class="nav-buttons">About</p></a>
         </div>
+      <!-- </div> -->
+      <!-- <div id="mobile-2" class="mobile"> -->
         <div class="nav-container">
           <a href="#projects"><p class="nav-buttons">Projects</p></a>
         </div>
+      <!-- </div> -->
+      <!-- <div id="mobile-3" class="mobile"> -->
         <div class="nav-container">
           <a href="#contact"><p class="nav-buttons">Contact</p></a>
         </div>
+      <!-- </div> -->
       </div>
 
-      <div id="nav-column-mobile" class="center">
+      <!-- <div id="nav-column-mobile" class="center">
         <div id="mobile-1" class="nav-container">
           <div>
               <a href="#about"><p class="nav-buttons">About</p></a>
@@ -103,7 +109,7 @@
               <a href="#contact"><p class="nav-buttons">Contact</p></a>
           </div>
         </div>
-      </div>
+      </div> -->
 
         <!-- Makisu plugin adds styling that overides css. to get around this, two seperate nav bars have been created (one for destop and one for mobile) that way, site does not break if window is resized. html has to be altered slightly, as well, for mobile to make animation function properly -->
 
