makisu now working on single nav bar. Still need to get css switching when resizing window. probably just an if statement

--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
     <div class="parent-column sticky">
       <div id="nav-column" class="center list">
         <!-- <div id="mobile-1" class="mobile"> -->
-        <div class="nav-container">
+        <div id="mobile-1" class="nav-container">
           <a href="#about"><p class="nav-buttons">About</p></a>
         </div>
       <!-- </div> -->
       <!-- <div id="mobile-2" class="mobile"> -->
-        <div class="nav-container">
+        <div id="mobile-2"class="nav-container">
           <a href="#projects"><p class="nav-buttons">Projects</p></a>
         </div>
       <!-- </div> -->
       <!-- <div id="mobile-3" class="mobile"> -->
-        <div class="nav-container">
+        <div id="mobile-3"class="nav-container">
           <a href="#contact"><p class="nav-buttons">Contact</p></a>
         </div>
       <!-- </div> -->
