--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   gtag('config', 'UA-105786823-1');
 </script>
 
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" charset="utf-8"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" charset="utf-8"></script> -->
   <script src="build/js/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="build/stylesheets/style.css">
   <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Slabo|Marcellus+SC|Open+Sans:300|Poiret+One|Cinzel" rel="stylesheet">
@@ -25,7 +25,7 @@
 <body>
   <section>
     <div id="heading-name" class="sticky">
-      <div class="container center">
+      <div class="container center sticky-background">
         <div class="flex-1"></div>
         <div class="flex-3">
           <div class="container">
@@ -48,7 +48,7 @@
         </div>
         <!-- <div class="flex-1"></div>       -->
       </div>
-      <div class="container center">
+      <div class="container center sticky-background">
         <div class="flex-1"></div>
         <div class="flex-3">
           <div class="container">
@@ -66,32 +66,35 @@
               <h1 class="letter">O</h1>
             </div>
           </div>
-      </div>
+        </div>
         <!-- <div class="flex-1"></div> -->
+      </div>
+      <div class="container">
+        <div id="nav-column" class="center list">
+            <!-- <div id="mobile-1" class="mobile"> -->
+          <div id="mobile-1" class="nav-container">
+            <a href="#about"><p class="nav-buttons">About</p></a>
+          </div>
+        <!-- </div> -->
+        <!-- <div id="mobile-2" class="mobile"> -->
+          <div id="mobile-2"class="nav-container">
+            <a href="#projects"><p class="nav-buttons">Projects</p></a>
+          </div>
+        <!-- </div> -->
+        <!-- <div id="mobile-3" class="mobile"> -->
+          <div id="mobile-3"class="nav-container">
+            <a href="#contact"><p class="nav-buttons">Contact</p></a>
+          </div>
+          <!-- </div> -->
+        </div> 
+        <div class="flex-3" id="nav-flex"></div>
       </div>
     </div>
   </section>
   
   <section id="content">
 
-    <div class="parent-column top">
-      <div id="nav-column" class="center list">
-        <!-- <div id="mobile-1" class="mobile"> -->
-        <div id="mobile-1" class="nav-container">
-          <a href="#about"><p class="nav-buttons">About</p></a>
-        </div>
-      <!-- </div> -->
-      <!-- <div id="mobile-2" class="mobile"> -->
-        <div id="mobile-2"class="nav-container">
-          <a href="#projects"><p class="nav-buttons">Projects</p></a>
-        </div>
-      <!-- </div> -->
-      <!-- <div id="mobile-3" class="mobile"> -->
-        <div id="mobile-3"class="nav-container">
-          <a href="#contact"><p class="nav-buttons">Contact</p></a>
-        </div>
-      <!-- </div> -->
-      </div>
+    <div class="parent-column">
 
       <!-- <div id="nav-column-mobile" class="center">
         <div id="mobile-1" class="nav-container">
@@ -112,7 +115,7 @@
       </div> -->
 
         <!-- Makisu plugin adds styling that overides css. to get around this, two seperate nav bars have been created (one for destop and one for mobile) that way, site does not break if window is resized. html has to be altered slightly, as well, for mobile to make animation function properly -->
-
+      <div id="column-offset"></div>
       <div id="content-column" class="main hidden">
         <!-- <section class="page1"> -->
         <div id="about">
