--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <!-- <div class="flex-1"></div> -->
       </div>
-      <div class="container">
+      <div class="container" id="nav-bar">
         <div id="nav-column" class="center list">
             <!-- <div id="mobile-1" class="mobile"> -->
           <div id="mobile-1" class="nav-container">
