--- a/index.html
+++ b/index.html
@@ -70,30 +70,32 @@
         <!-- <div class="flex-1"></div> -->
       </div>
       <div class="container" id="nav-bar">
+
+
+
         <div id="nav-column" class="center list">
-            <!-- <div id="mobile-1" class="mobile"> -->
           <div id="mobile-1" class="nav-container">
             <a href="#about"><p class="nav-buttons">About</p></a>
           </div>
-        <!-- </div> -->
-        <!-- <div id="mobile-2" class="mobile"> -->
           <div id="mobile-2"class="nav-container">
             <a href="#projects"><p class="nav-buttons">Projects</p></a>
           </div>
-        <!-- </div> -->
-        <!-- <div id="mobile-3" class="mobile"> -->
           <div id="mobile-3"class="nav-container">
             <a href="#contact"><p class="nav-buttons">Contact</p></a>
           </div>
-          <!-- </div> -->
         </div> 
+
+
+
         <div class="flex-3" id="nav-flex"></div>
       </div>
     </div>
   </section>
   
-  <section id="content">
 
+
+
+  <section id="content">
     <div class="parent-column">
 
       <!-- <div id="nav-column-mobile" class="center">
@@ -244,15 +246,13 @@
         </div> -->
 
 
-        <div class="secondaryColumn">
+        <!-- <div class="secondaryColumn">
 
-        </div>
+        </div> -->
 
 
     </div>
   </section>
-  <!-- <section id="fuckstick">
-    <p>fuck</p>
-  </section> -->
+  <!-- <div id="test"></div> -->
 </body>
 </html>
