desktop nav seemingly working. need to fix mobile version. Still need to fix onresize issue for nav bar

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <!-- <div class="secondaryColumn">
 
         </div> -->
-  </section>
+  <!-- </section> -->
   <!-- <div id="test"></div> -->
 
 
@@ -295,26 +295,33 @@
         </div>
       </div>
     </div>
+    <div id="mobile-nav"></div>
   </section>
   
   <section id="content">
 
     <div class="parent-column">
       <div id="nav-column">
-        <div id="makisu-nav" class="center list fixed">
-          <div class="nav-container">
-            <a href="#about"><p class="nav-buttons">About</p></a>
+        <div id="nav-column-mobile" class="center list fixed">
+          <div id="mobile-1" class="thatnav">
+            <div class="nav-container">
+              <a href="#about"><p class="nav-buttons">About</p></a>
+            </div>
           </div>
-          <div class="nav-container">
-            <a href="#projects"><p class="nav-buttons">Projects</p></a>
+          <div id="mobile-2" class="thatnav">
+            <div class="nav-container">
+              <a href="#projects"><p class="nav-buttons">Projects</p></a>
+            </div>
           </div>
-          <div class="nav-container">
-            <a href="#contact"><p class="nav-buttons">Contact</p></a>
+          <div id="mobile-3" class="thatnav">
+            <div class="nav-container">
+              <a href="#contact"><p class="nav-buttons">Contact</p></a>
+            </div>
           </div>
         </div>
       </div>
 
-      <div id="nav-column-mobile" class="center">
+      <!-- <div id="nav-column-mobile" class="center">
         <div id="mobile-1" class="nav-container">
           <div>
               <a href="#about"><p class="nav-buttons">About</p></a>
@@ -330,7 +337,7 @@
               <a href="#contact"><p class="nav-buttons">Contact</p></a>
           </div>
         </div>
-      </div>
+      </div> -->
 
         <!-- Makisu plugin adds styling that overides css. to get around this, two seperate nav bars have been created (one for destop and one for mobile) that way, site does not break if window is resized. html has to be altered slightly, as well, for mobile to make animation function properly -->
 
@@ -358,13 +365,6 @@
           
 
           <!-- <img class="project-img"  src="build/images/Fraga.png" alt=""> -->
-          <p class="projects-description">Tic Tac Toe - JavaScript</p>
-          <p>This project represents my first attempt at creating a website from start to finish, using HTML, CSS, JavaScript and jQuery. Additionally, I programmed a near unbeatable computer opponent for the game. There is only one route a player can take to beat the computer.</p>
-          <div>
-            <p class="project-links" onclick="window.open('https://aparkinbotswana.github.io/tic_tac_toe/Index_tictactoe.html')">See the live site!</p>
-            <p class="project-links" onclick="window.open('https://github.com/aparkinbotswana/tic_tac_toe')">See the code!</p>
-          </div>
-          <img class="project-img"  src="build/images/tictactoe.gif" alt="Tic tac toe gif">
         </div>
         <div class="content" id="contact">
           <p class="text" onclick="window.open('https://www.linkedin.com/in/james-theo/')">LinkedIn</p>
