single nav for mobile and desktop working and appending. just need to fix up margins and onresize

--- a/index.html
+++ b/index.html
@@ -295,7 +295,8 @@
         </div>
       </div>
     </div>
-    <div id="mobile-nav"></div>
+    <div id="mobile-nav">
+    </div>
   </section>
   
   <section id="content">
@@ -303,17 +304,17 @@
     <div class="parent-column">
       <div id="nav-column">
         <div id="nav-column-mobile" class="center list fixed">
-          <div id="mobile-1" class="thatnav">
+          <div id="mobile-1" class="mobile">
             <div class="nav-container">
               <a href="#about"><p class="nav-buttons">About</p></a>
             </div>
           </div>
-          <div id="mobile-2" class="thatnav">
+          <div id="mobile-2" class="mobile">
             <div class="nav-container">
               <a href="#projects"><p class="nav-buttons">Projects</p></a>
             </div>
           </div>
-          <div id="mobile-3" class="thatnav">
+          <div id="mobile-3" class="mobile">
             <div class="nav-container">
               <a href="#contact"><p class="nav-buttons">Contact</p></a>
             </div>
