seeing if this fixes stupid extra animation call

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       </div>
       <div id="content-column" class="main">
         <div id="about">
-          <p class="box text">I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
+          <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
         </div>
         <div id="projects">
-          <p class="projects-description">Virtual Auslan  Interpreter - JavaScript/Leap Motion</p>
+          <p>Virtual Auslan  Interpreter - JavaScript/Leap Motion</p>
           <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p>
           <div>
             <p class="link" onclick="window.open('https://aparkinbotswana.github.io/Auslan-Interpreter/')">See the live site!</p>
@@ -113,17 +113,17 @@
         </div>
 
         <div class="content" id="contact">
-          <p class="text" onclick="window.open('https://www.linkedin.com/in/james-theo/')">LinkedIn</p>
-          <p class="contact-details link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">https://www.linkedin.com/in/james-theo/</p>
+          <p onclick="window.open('https://www.linkedin.com/in/james-theo/')">LinkedIn</p>
+          <p class="link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">https://www.linkedin.com/in/james-theo/</p>
           
-          <p class="text" onclick="window.open('https://github.com/aparkinbotswana')">Github</p>
-          <p class="contact-details link" onclick="window.open('https://github.com/aparkinbotswana')"> https://github.com/aparkinbotswana</p>
+          <p onclick="window.open('https://github.com/aparkinbotswana')">Github</p>
+          <p class="link" onclick="window.open('https://github.com/aparkinbotswana')"> https://github.com/aparkinbotswana</p>
 
-          <p class="text">Email</p>
-          <p class="text">theojames1989@gmail.com</p>
-          <p class="text">Contact Number</p>
-          <p class="text">0432 665 747</p>
-          <p class="text">Resume available upon request</p>
+          <p>Email</p>
+          <p>theojames1989@gmail.com</p>
+          <p>Contact Number</p>
+          <p>0432 665 747</p>
+          <p>Resume available upon request</p>
         </div>
       </div>
     </div>
