still seeing if this fixes stupid extra animation call

--- a/index.html
+++ b/index.html
@@ -113,17 +113,17 @@
         </div>
 
         <div class="content" id="contact">
-          <p onclick="window.open('https://www.linkedin.com/in/james-theo/')">LinkedIn</p>
+          <p class="text" onclick="window.open('https://www.linkedin.com/in/james-theo/')">LinkedIn</p>
           <p class="link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">https://www.linkedin.com/in/james-theo/</p>
           
-          <p onclick="window.open('https://github.com/aparkinbotswana')">Github</p>
+          <p class="text" onclick="window.open('https://github.com/aparkinbotswana')">Github</p>
           <p class="link" onclick="window.open('https://github.com/aparkinbotswana')"> https://github.com/aparkinbotswana</p>
 
-          <p>Email</p>
-          <p>theojames1989@gmail.com</p>
-          <p>Contact Number</p>
-          <p>0432 665 747</p>
-          <p>Resume available upon request</p>
+          <p class="text">Email</p>
+          <p class="text">theojames1989@gmail.com</p>
+          <p class="text">Contact Number</p>
+          <p class="text">0432 665 747</p>
+          <p class="text">Resume available upon request</p>
         </div>
       </div>
     </div>
