fixed up more css and fonts and added images in

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="build/js/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="build/stylesheets/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Slabo|Marcellus+SC|Open+Sans:300|Poiret+One|Cinzel" rel="stylesheet">
-  <script src="build/js/bundle.js" charset="utf-8"></script>
+  <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat|Playfair+Display|Slabo+27px|Sunflower:300" rel="stylesheet">  <script src="build/js/bundle.js" charset="utf-8"></script>
   <title>James Theo: Web Developer</title>
 </head>
 <body>
@@ -82,7 +81,7 @@
           </div>
         </div>
       </div>
-      <div id="content-column" class="main">
+      <div id="content-column" class="center">
         <div id="about">
           <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
         </div>
@@ -94,8 +93,8 @@
             <p class="link" onclick="window.open('https://github.com/aparkinbotswana/Auslan-Interpreter')">See the code!</p>
           </div>
 
-          <div>
-            <!-- <img class="project-img"  src="build/images/AuslanInterpreter.png" alt=""> -->
+          <div class="image-container center">
+            <img class="project-img"  src="build/images/AuslanInterpreter.png" alt="">
           </div>
 
 
@@ -106,9 +105,8 @@
             <p class="link" onclick="window.open('https://fraga-app.herokuapp.com/')">See the live site!</p>
             <p class="link" onclick="window.open('https://github.com/aparkinbotswana/Fraga')">See the code!</p>
           </div>
-          <div>
-
-            <!-- <img class="project-img"  src="build/images/Fraga.png" alt=""> -->
+          <div class="image-container center">
+            <img class="project-img"  src="build/images/Fraga.png" alt="">
           </div>
         </div>
 
