added a few headings

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
           <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
         </div>
         <div id="projects">
-          <p>Virtual Auslan  Interpreter - JavaScript/Leap Motion</p>
+          <h1></h1>
+          <h1>Virtual Auslan  Interpreter - JavaScript/Leap Motion</h1>
           <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p>
           <div>
             <p class="link" onclick="window.open('https://aparkinbotswana.github.io/Auslan-Interpreter/')">See the live site!</p>
@@ -99,7 +100,7 @@
 
 
 
-          <p class="projects-description">Fråga - JavaScript/Ruby on Rails</p>
+          <h1 class="projects-description">Fråga - JavaScript/Ruby on Rails</h1>
           <p>Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
           <div>
             <p class="link" onclick="window.open('https://fraga-app.herokuapp.com/')">See the live site!</p>
@@ -111,6 +112,7 @@
         </div>
 
         <div class="content" id="contact">
+          <h1>Contact</h1>
           <p class="text" onclick="window.open('https://www.linkedin.com/in/james-theo/')">LinkedIn</p>
           <p class="link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">https://www.linkedin.com/in/james-theo/</p>
           
