--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="build/js/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="build/stylesheets/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat|Playfair+Display|Slabo+27px|Sunflower:300" rel="stylesheet">  <script src="build/js/bundle.js" charset="utf-8"></script>
+  <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat" rel="stylesheet">  <script src="build/js/bundle.js" charset="utf-8"></script>
   <title>James Theo: Web Developer</title>
 </head>
 <body>
