Connie is a boob

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="build/js/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="build/stylesheets/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat" rel="stylesheet">  <script src="build/js/bundle.js" charset="utf-8"></script>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">  <script src="build/js/bundle.js" charset="utf-8"></script>
   <title>James Theo: Web Developer</title>
 </head>
 <body>
@@ -121,13 +121,9 @@
 
           <p class="text">Email</p>
           <p class="text">theojames1989@gmail.com</p>
-          <p class="text">Contact Number</p>
-          <p class="text">0432 665 747</p>
-          <p class="text">Resume available upon request</p>
         </div>
       </div>
     </div>
-    <div class="secondaryColumn"></div>
   </section>
 </body>
 </html>
