polishing up more of the html and css

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
           <h1>Virtual Auslan  Interpreter - JavaScript/Leap Motion</h1>
           <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p>
           <div>
-            <h2 class="link" onclick="window.open('https://aparkinbotswana.github.io/Auslan-Interpreter/')">See the live site!</h2>
-            <h2 class="link" onclick="window.open('https://github.com/aparkinbotswana/Auslan-Interpreter')">See the code!</h2>
+            <h2 class="link" onclick="window.open('https://aparkinbotswana.github.io/Auslan-Interpreter/')">Live site</h2>
+            <h2 class="link" onclick="window.open('https://github.com/aparkinbotswana/Auslan-Interpreter')">Code</h2>
           </div>
 
           <div class="image-container center">
@@ -103,8 +103,8 @@
           <h1 class="projects-description">Fråga - JavaScript/Ruby on Rails</h1>
           <p>Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
           <div>
-            <h2 class="link" onclick="window.open('https://fraga-app.herokuapp.com/')">See the live site!</h2>
-            <h2 class="link" onclick="window.open('https://github.com/aparkinbotswana/Fraga')">See the code!</h2>
+            <h2 class="link" onclick="window.open('https://fraga-app.herokuapp.com/')">Live site</h2>
+            <h2 class="link" onclick="window.open('https://github.com/aparkinbotswana/Fraga')">Code</h2>
           </div>
           <div class="image-container center">
             <img class="project-img"  src="build/images/Fraga.png" alt="">
