--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
   <section id="header">
     <div id="heading-name" class="sticky sticky-background">
       <div class="container center">
-        <div class="flex-1"></div>
+        <!-- <div class="flex-1"></div> -->
         <div class="flex-3">
           <div class="container">
+            <div class="flex-1"></div>    
             <div class="flex-1 name">        
               <h1 class="letter first-letter">J</h1>
             </div>
@@ -31,14 +32,16 @@
             <div class="flex-1">        
               <h1 class="letter">S</h1>
             </div>
+            <div class="flex-3"></div>
           </div>
         </div>
       </div>
       <div class="container center">
-        <div class="flex-1"></div>
+        <!-- <div class="flex-1"></div> -->
         <div class="flex-3">
           <div class="container">
-            <div class="flex-1"></div>    
+            <div class="flex-1"></div>
+            <div class="flex-1"></div>        
             <div class="flex-1 name">        
               <h1 class="letter first-letter">T</h1>
             </div>
@@ -51,6 +54,7 @@
             <div class="flex-1">        
               <h1 class="letter">O</h1>
             </div>
+            <div class="flex-3"></div>
           </div>
         </div>
       </div>
@@ -90,37 +94,38 @@
           <h1>Virtual Auslan  Interpreter - JavaScript/Leap Motion</h1>
           <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p>
           <div>
-            <h2 class="link" onclick="window.open('https://aparkinbotswana.github.io/Auslan-Interpreter/')">Live site</h2>
-            <h2 class="link" onclick="window.open('https://github.com/aparkinbotswana/Auslan-Interpreter')">Code</h2>
+            <a class="button" onclick="window.open('https://aparkinbotswana.github.io/Auslan-Interpreter/')">Demo</a>
+            <a class="button button-ghost" onclick="window.open('https://github.com/aparkinbotswana/Auslan-Interpreter')">Code</a>
           </div>
-
           <div class="image-container center">
-            <img class="project-img"  src="build/images/AuslanInterpreter.png" alt="">
+            <img class="project-img"  src="build/images/AuslanInterpreter.png" alt="Auslan Interpreter project image">
           </div>
-
 
 
           <h1 class="projects-description">Fråga - JavaScript/Ruby on Rails</h1>
           <p>Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
           <div>
-            <h2 class="link" onclick="window.open('https://fraga-app.herokuapp.com/')">Live site</h2>
-            <h2 class="link" onclick="window.open('https://github.com/aparkinbotswana/Fraga')">Code</h2>
+            <a class="button" onclick="window.open('https://fraga-app.herokuapp.com/')">Demo</a>
+            <a class="button button-ghost" onclick="window.open('https://github.com/aparkinbotswana/Fraga')">Code</a>
           </div>
           <div class="image-container center">
-            <img class="project-img"  src="build/images/Fraga.png" alt="">
+            <img class="project-img"  src="build/images/Fraga.png" alt="Fraga project image">
           </div>
         </div>
 
         <div class="content" id="contact">
           <h1>Contact</h1>
-          <p class="text" onclick="window.open('https://www.linkedin.com/in/james-theo/')">LinkedIn</p>
-          <p class="link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">https://www.linkedin.com/in/james-theo/</p>
-          
-          <p class="text" onclick="window.open('https://github.com/aparkinbotswana')">Github</p>
-          <p class="link" onclick="window.open('https://github.com/aparkinbotswana')"> https://github.com/aparkinbotswana</p>
-
-          <p class="text">Email</p>
-          <p class="text">theojames1989@gmail.com</p>
+          <div id="contact-container" class="container">
+            <div class="flex-1">
+              <img class="svg-image link" src="build/images/002-github.svg" alt="github link" onclick="window.open('https://github.com/aparkinbotswana')">
+            </div>
+            <div class="flex-1">
+              <img class="svg-image link" src="build/images/001-linkedin.svg" alt="linkedin link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">
+            </div>
+            <div class="flex-1">
+              <a href="mailto:theojames1989@gmail.com"><img class="svg-image link" src="build/images/003-mail.svg" alt="email address"></a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
