fixed up padding for buttons

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <h1></h1>
           <h1>Virtual Auslan  Interpreter - JavaScript/Leap Motion</h1>
           <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p>
-          <div>
+          <div class="code-buttons">
             <a class="button" onclick="window.open('https://aparkinbotswana.github.io/Auslan-Interpreter/')">Demo</a>
             <a class="button button-ghost" onclick="window.open('https://github.com/aparkinbotswana/Auslan-Interpreter')">Code</a>
           </div>
@@ -104,7 +104,7 @@
 
           <h1 class="projects-description">Fråga - JavaScript/Ruby on Rails</h1>
           <p>Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
-          <div>
+          <div class="code-buttons">
             <a class="button" onclick="window.open('https://fraga-app.herokuapp.com/')">Demo</a>
             <a class="button button-ghost" onclick="window.open('https://github.com/aparkinbotswana/Fraga')">Code</a>
           </div>
