fixed makisu scss spelling error

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div id="nav-column-mobile" class="center list fixed">
           <div id="mobile-1" class="mobile">
             <div class="nav-container">
-              <a href="#about"><p class="nav-buttons">About</p></a>
+              <a id="nav-contact" href="#about"><p class="nav-buttons">About</p></a>
             </div>
           </div>
           <div id="mobile-2" class="mobile">
