--- a/index.html
+++ b/index.html
@@ -10,125 +10,126 @@
   <title>James Theo: Web Developer</title>
 </head>
 <body>
-  <section id="header">
-    <div id="heading-name" class="sticky sticky-background">
-      <div class="container center">
-        <!-- <div class="flex-1"></div> -->
-        <div class="flex-3">
-          <div class="container">
-            <div class="flex-1"></div>    
-            <div class="flex-1 name">        
-              <h1 class="letter first-letter">J</h1>
+  <main class="portfolio">
+    <section id="header">
+      <div id="heading-name" class="sticky sticky-background">
+        <div class="container">
+          <!-- <div class="flex-1"></div> -->
+          <div class="flex-3">
+            <div class="container center">
+              <div class="flex-8"></div>    
+              <div class="flex-1 name">        
+                <h1 class="letter first-letter">J</h1>
+              </div>
+              <div class="flex-1">        
+                <h1 class="letter">A</h1>
+              </div>
+              <div class="flex-1">        
+                <h1 class="letter">M</h1>
+              </div>
+              <div class="flex-1">        
+                <h1 class="letter">E</h1>
+              </div>
+              <div class="flex-1">        
+                <h1 class="letter">S</h1>
+              </div>
+              <div class="flex-1"></div>
             </div>
-            <div class="flex-1">        
-              <h1 class="letter">A</h1>
+          </div>
+        </div>
+        <div class="container">
+          <!-- <div class="flex-1"></div> -->
+          <div class="flex-3">
+            <div class="container center">
+              <div class="flex-8"></div>
+              <div class="flex-1"></div>        
+              <div class="flex-1 name">        
+                <h1 class="letter first-letter">T</h1>
+              </div>
+              <div class="flex-1">        
+                <h1 class="letter">H</h1>
+              </div>
+              <div class="flex-1">        
+                <h1 class="letter">E</h1>
+              </div>
+              <div class="flex-1">        
+                <h1 class="letter">O</h1>
+              </div>
+              <div class="flex-1"></div>
             </div>
-            <div class="flex-1">        
-              <h1 class="letter">M</h1>
+          </div>
+        </div>
+        <div id="mobile-nav">
+        </div>    
+      </div>
+    </section>
+    
+
+    <section id="content">
+      <div class="parent-column">
+        <div id="nav-column">
+          <div id="nav-column-mobile" class="list fixed">
+            <div id="mobile-1" class="mobile">
+              <div class="nav-container">
+                <a id="nav-contact" href="#about"><p class="nav-buttons">About</p></a>
+              </div>
             </div>
-            <div class="flex-1">        
-              <h1 class="letter">E</h1>
+            <div id="mobile-2" class="mobile">
+              <div class="nav-container">
+                <a href="#projects"><p class="nav-buttons">Projects</p></a>
+              </div>
             </div>
-            <div class="flex-1">        
-              <h1 class="letter">S</h1>
+            <div id="mobile-3" class="mobile">
+              <div class="nav-container">
+                <a href="#contact"><p class="nav-buttons">Contact</p></a>
+              </div>
             </div>
-            <div class="flex-3"></div>
+          </div>
+        </div>
+        <div id="content-column">
+          <div id="about">
+            <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
+          </div>
+          <div id="projects">
+            <h1>Virtual Auslan  Interpreter - JavaScript/Leap Motion</h1>
+            <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p>
+            <div class="code-buttons center">
+              <a class="button" onclick="window.open('https://aparkinbotswana.github.io/Auslan-Interpreter/')">Demo</a>
+              <a class="button button-ghost" onclick="window.open('https://github.com/aparkinbotswana/Auslan-Interpreter')">Code</a>
+            </div>
+            <div class="image-container center">
+              <img class="project-img"  src="build/images/AuslanInterpreter.png" alt="Auslan Interpreter project image">
+            </div>
+
+
+            <h1 class="projects-description">Fråga - JavaScript/Ruby on Rails</h1>
+            <p>Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
+            <div class="code-buttons center">
+              <a class="button" onclick="window.open('https://fraga-app.herokuapp.com/')">Demo</a>
+              <a class="button button-ghost" onclick="window.open('https://github.com/aparkinbotswana/Fraga')">Code</a>
+            </div>
+            <div class="image-container center">
+              <img class="project-img"  src="build/images/Fraga.png" alt="Fraga project image">
+            </div>
+          </div>
+
+          <div class="content center" id="contact">
+            <h1>Contact</h1>
+            <div id="contact-container" class="container">
+              <div class="flex-1">
+                <img class="svg-image link" src="build/images/002-github.svg" alt="github link" onclick="window.open('https://github.com/aparkinbotswana')">
+              </div>
+              <div class="flex-1">
+                <img class="svg-image link" src="build/images/001-linkedin.svg" alt="linkedin link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">
+              </div>
+              <div class="flex-1">
+                <a href="mailto:theojames1989@gmail.com"><img class="svg-image link" src="build/images/003-mail.svg" alt="email address"></a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="container center">
-        <!-- <div class="flex-1"></div> -->
-        <div class="flex-3">
-          <div class="container">
-            <div class="flex-1"></div>
-            <div class="flex-1"></div>        
-            <div class="flex-1 name">        
-              <h1 class="letter first-letter">T</h1>
-            </div>
-            <div class="flex-1">        
-              <h1 class="letter">H</h1>
-            </div>
-            <div class="flex-1">        
-              <h1 class="letter">E</h1>
-            </div>
-            <div class="flex-1">        
-              <h1 class="letter">O</h1>
-            </div>
-            <div class="flex-3"></div>
-          </div>
-        </div>
-      </div>
-      <div id="mobile-nav">
-      </div>    
-    </div>
-  </section>
-  
-
-  <section id="content">
-    <div class="parent-column">
-      <div id="nav-column">
-        <div id="nav-column-mobile" class="center list fixed">
-          <div id="mobile-1" class="mobile">
-            <div class="nav-container">
-              <a id="nav-contact" href="#about"><p class="nav-buttons">About</p></a>
-            </div>
-          </div>
-          <div id="mobile-2" class="mobile">
-            <div class="nav-container">
-              <a href="#projects"><p class="nav-buttons">Projects</p></a>
-            </div>
-          </div>
-          <div id="mobile-3" class="mobile">
-            <div class="nav-container">
-              <a href="#contact"><p class="nav-buttons">Contact</p></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="content-column" class="center">
-        <div id="about">
-          <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
-        </div>
-        <div id="projects">
-          <h1></h1>
-          <h1>Virtual Auslan  Interpreter - JavaScript/Leap Motion</h1>
-          <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p>
-          <div class="code-buttons">
-            <a class="button" onclick="window.open('https://aparkinbotswana.github.io/Auslan-Interpreter/')">Demo</a>
-            <a class="button button-ghost" onclick="window.open('https://github.com/aparkinbotswana/Auslan-Interpreter')">Code</a>
-          </div>
-          <div class="image-container center">
-            <img class="project-img"  src="build/images/AuslanInterpreter.png" alt="Auslan Interpreter project image">
-          </div>
-
-
-          <h1 class="projects-description">Fråga - JavaScript/Ruby on Rails</h1>
-          <p>Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
-          <div class="code-buttons">
-            <a class="button" onclick="window.open('https://fraga-app.herokuapp.com/')">Demo</a>
-            <a class="button button-ghost" onclick="window.open('https://github.com/aparkinbotswana/Fraga')">Code</a>
-          </div>
-          <div class="image-container center">
-            <img class="project-img"  src="build/images/Fraga.png" alt="Fraga project image">
-          </div>
-        </div>
-
-        <div class="content" id="contact">
-          <h1>Contact</h1>
-          <div id="contact-container" class="container">
-            <div class="flex-1">
-              <img class="svg-image link" src="build/images/002-github.svg" alt="github link" onclick="window.open('https://github.com/aparkinbotswana')">
-            </div>
-            <div class="flex-1">
-              <img class="svg-image link" src="build/images/001-linkedin.svg" alt="linkedin link" onclick="window.open('https://www.linkedin.com/in/james-theo/')">
-            </div>
-            <div class="flex-1">
-              <a href="mailto:theojames1989@gmail.com"><img class="svg-image link" src="build/images/003-mail.svg" alt="email address"></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
+  </main>
 </body>
 </html>
