--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>James Theo: Web Developer</title>
 </head>
 <body>
-  <main class="portfolio">
+  <!-- <main class="portfolio"> -->
     <section id="header">
       <div id="heading-name" class="sticky sticky-background">
         <div class="container">
@@ -130,6 +130,6 @@
         </div>
       </div>
     </section>
-  </main>
+  <!-- </main> -->
 </body>
 </html>
